
2007-06-06  Benno Schulenberg  <benno@vertaalt.nl>

	* README: Updates.

2007-06-05  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot, lib/run.py: Wrap some overlong lines,
	remove "^L"s, remove obsolete character-set aliases.

2007-06-04  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot, lib/run.py: Simplify some of the robot's messages.

2007-06-03  Benno Schulenberg  <benno@vertaalt.nl>

	* web/layout.html: Temporarily tell search engines to stay away.

2007-06-02  Benno Schulenberg  <benno@vertaalt.nl>

	* tools/mirror_tp.py, tools/mkindex.py, lib/config.py:
	Simplify the mirror script, add the make_index script.

2007-06-01  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, registry/Makefile:
	Updates and improvements.

2007-05-31  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot, lib/sgml.py: Correct two paths, remove two
	special paths.

	* lib/config.py, lib/registry.py, bin/po-register, bin/tp-robot:
	Configure tmp/ subdir in a better way.

	* bin/tp-robot: Correct some grammar and misspellings in the
	messages, replace "`" with "'", and remove the long obsolete
	mentioning of Linux International mailing lists.

	* README: Add first bits of procedural info from Karl.

2007-05-31  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/registry.py, bin/po-register, bin/tp-robot:
	Put tmp/ subdir under homedir, not under site/.

	* bin/run-queue.sh, README: Give robot mail queue a better name.

2007-05-30  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/run-queue.sh, README: Bring the processing of the robot
	mail queue up to date, and document the new situation.

2007-05-29  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, lib/config.py, web/Makefile:
	Switch things over to user tp.

2007-05-27  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Use quotes and indentation more consistently,
	change the texts a bit, and put the link to the latest POT file
	in a more logical place.
