@@ -27,7 +27,7 @@
    <a href="leaders.html">team coordinators</a>, and for
    <a href="translators.html">individual tranlators</a>.
    If you still have any questions, you can write to
-   <a href="mailto:translation@translationproject.org">the TP coordinator</a>.</p>
+   <a href="mailto:coordinator@translationproject.org">the TP coordinator</a>.</p>
 
   <h3>Translation tools</h3>
 
