@@ -11,7 +11,7 @@
 
 		TP-Robot PACKAGE-VERSION.TEAM.po
 
-   The mail should be sent to <translation@translationproject.org>.  You may
+   The mail should be sent to <robot@translationproject.org>.  You may
    expect a reply within fifteen minutes.
    
    If you need help in resolving problems, or if you suspect the robot is
